manifests/webservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paas-webservice
  namespace: system
  labels:
    app.kubernetes.io/component: webservice
    app.kubernetes.io/part-of: opr-paas
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: webservice
      app.kubernetes.io/part-of: opr-paas
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: webservice
        app.kubernetes.io/part-of: opr-paas
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
      containers:
        - command:
            - /webservice
          image: webservice:latest
          imagePullPolicy: Always
          name: webservice
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            limits:
              cpu: 200m
              memory: 150Mi
            requests:
              cpu: 100m
              memory: 75Mi
          volumeMounts:
            - name: paas-public-key
              mountPath: /secrets/paas
      terminationGracePeriodSeconds: 10
      volumes:
        - name: paas-public-key
          configMap:
            name: paas-secrets-publickey
            defaultMode: 420
