manifests/webservice/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opr-paas-webservice
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/component: webservice
    app.kubernetes.io/part-of: opr-paas
