manifests/webservice/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: paas-webservice
  labels:
    app.kubernetes.io/component: webservice
    app.kubernetes.io/part-of: opr-paas
spec:
  to:
    kind: Service
    name: paas-webservice
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
